terraform/alb.tf

# Application Load Balancer


resource "aws_lb" "api" {
  name               = "${var.devops-assignment}-alb"
  internal           = false
  load_balancer_type = "application"

  security_groups = [
    aws_security_group.alb_sg.id
  ]

  subnets = [
    aws_subnet.public.id
  ]

  tags = {
    Name = "${var.devops-assignment}-alb"
  }
}


# Target Group


resource "aws_lb_target_group" "api" {
  name        = "${var.devops-assignment}-api-tg"
  port        = 8080
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = aws_vpc.main.id

  health_check {
    enabled             = true
    path                = "/health"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }

  tags = {
    Name = "${var.devops-assignment}-api-tg"
  }
}


# HTTP Listener


resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.api.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.api.arn
  }
}
